<?xml version="1.0"?>
<package>
  <name>vrep_ros_teleop</name>
  <version>0.0.1</version>
  <description>VREP Teleop control</description>
  <maintainer email="cedric.pradalier@georgiatech-metz.fr">cedricp</maintainer>
  <license>BSD</license> 
  <buildtool_depend>catkin</buildtool_depend> 
</package>
